  invited to report them to the developers from there, either
  automatically or by running ``apport-bug``.  No information is sent
  without specific permission from the user.  (Martin Pool, #515052)

* Parsing of command lines, for example in ``diff --using``, no longer
  treats backslash as an escape character on Windows.   (Gordon Tyler,
  #392248)

* Plugins can be disabled by adding ``-<plugin_name>`` in ``BZR_PLUGIN_PATH``.
  (Vincent Ladeuil, #411413)

* Tree-shape conflicts can be resolved by providing ``--take-this`` and
  ``--take-other`` to the ``bzr resolve`` command. Just marking the conflict
  as resolved is still accessible via the ``--done`` default action.
  (Vincent Ladeuil)

* Merges can be proposed on Launchpad with the new lp-propose-merge command.
  (Aaron Bentley, Jonathan Lange)

Bug Fixes
*********

* Added docstring for ``Tree.iter_changes``
  (John Arbash Meinel, #304182)

* Allow exporting a single file using ``bzr export``.
  (Michal Junák, #511987)

* Allow syscalls to automatically restart when ``TextUIFactory``'s
  SIGWINCH handler is invoked, avoiding ``EINTR`` errors during blocking
  IO, which are often poorly handled by Python's libraries and parts of
  bzrlib.  (Andrew Bennetts, #496813)

* Avoid infinite recursion when probing for apport.
  (Vincent Ladeuil, #516934)

* Avoid ``malloc(0)`` in ``patiencediff``, which is non-portable.
  (Martin Pool, #331095)

* ``bzr add`` will not add conflict related files unless explicitly required.
  (Vincent Ladeuil, #322767, #414589)

* ``bzr help`` will no longer trigger the get_missing_command hook when
  doing a topic lookup. This avoids prompting (like 'no command plugins/loom,
  did you mean log?') when getting help. In future we may trigger the hook 
  deliberately when no help topics match from any help index.
  (Robert Collins, #396261)

* ``bzr remove-tree`` can now remove multiple working trees.
  (Jared Hance, Andrew Bennetts, #253137)
